--- a/Presentacion/Views/Usuarios/Create.cshtml
+++ b/Presentacion/Views/Usuarios/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dominio.Usuario
+﻿@model Presentacion.Models.UsuarioVM
 
 @{
     ViewBag.Title = "Create";
@@ -13,12 +13,28 @@
     <fieldset>
         <legend>Usuario</legend>
 
+       
         <div class="editor-label">
             @Html.LabelFor(model => model.NombreUsuario)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.NombreUsuario)
             @Html.ValidationMessageFor(model => model.NombreUsuario)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Password)
+        </div>
+        <div class="editor-field">
+                 @Html.EditorFor(model => model.Password)
+                 @Html.ValidationMessageFor(model => model.Password)
+        </div>
+
+        <div class="editor-label">
+            @Html.Label("Tipo")
+        </div>
+        <div class="editor-field">
+            //@Html.DropDownListFor(model => model.Tipo, Model.TiposDeUsuarios)
         </div>
 
         <div class="editor-label">
