--- a/Presentacion/Views/Usuarios/Index.cshtml
+++ b/Presentacion/Views/Usuarios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Dominio.Usuario>
+﻿@model Presentacion.Models.ListaUsuariosVM
 
 @{
     ViewBag.Title = "Index";
@@ -11,11 +11,26 @@
 </p>
 
 
+@using (Html.BeginForm())
+{
+    
+    <p>
+        Buscar por Nombre: 
+        @Html.TextBoxFor(model => model.Nombre)
+    </p>
+    <p>
+        Buscar por Apellido: 
+        @Html.TextBoxFor(model => model.Apellido)
+    </p>
+    <p>
+        Buscar por Legajo: 
+        @Html.TextBoxFor(model => model.Legajo)
+    </p>
+    <input type="submit" value="Buscar" />
+}
+
 <table>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NombreUsuario)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.Nombre)
         </th>
@@ -23,25 +38,19 @@
             @Html.DisplayNameFor(model => model.Apellido)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DNI)
+            DNI
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Legajo)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Telefono)
+            Email
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model.ListaUsuario) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.NombreUsuario)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Nombre)
         </td>
@@ -58,20 +67,15 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Telefono)
-        </td>
-        <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id }) |
-            @if(item.EstadoUsuario.Nombre.Equals("Activo"))
-	            {
-		             @Html.ActionLink("Lock", "Lock", new { id=item.Id })
-	            }
-            @if(item.EstadoUsuario.Nombre.Equals("Bloqueado"))
-                { 
-                    @Html.ActionLink("Unlock", "Unlock", new { id=item.Id })
-                }
+            @if (item.EstadoUsuario != Dominio.EstadoUsuario.Inactivo)
+            {
+                string accion = Model.ObtenerAccionBloquear(item.Id);
+                @Html.ActionLink(accion, accion, new { id = item.Id })
+            }
+
         </td>
     </tr>
 }
