--- a/Presentacion/Views/Usuarios/Index.cshtml
+++ b/Presentacion/Views/Usuarios/Index.cshtml
@@ -69,7 +69,7 @@
         <td>
             
             @Html.ActionLink("Details", "Details", new { id=item.Id }) 
-            @if (item.EstadoUsuario != Dominio.EstadoUsuario.Inactivo)
+            @if (!item.isInactive())
             {
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) 
                 @Html.ActionLink("Delete", "Delete", new { id=item.Id }) 
