--- a/Presentacion/Views/Recursos/Details.cshtml
+++ b/Presentacion/Views/Recursos/Details.cshtml
@@ -1,43 +1,43 @@
 ﻿@model Dominio.Recurso
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalle";
 }
 
-<h2>Details</h2>
+<h2>Detalles del recurso</h2>
 
 <fieldset>
     <legend>Recurso</legend>
 
     <!-- Codigo -->
-    <div class="editor-label">
+    <div class="display-label">
         @Html.DisplayNameFor(model => model.Codigo)
     </div>
-    <div class="editor-field">
+    <div class="display-field">
         @Html.DisplayFor(model => model.Codigo)
     </div>
 
     <!-- Nombre -->
-    <div class="editor-label">
+    <div class="display-label">
         @Html.DisplayNameFor(model => model.Nombre)
     </div>
-    <div class="editor-field">
+    <div class="display-field">
         @Html.DisplayFor(model => model.Nombre)
     </div>
 
     <!-- Tipo -->
-    <div class="editor-label">
+    <div class="display-label">
         @Html.DisplayNameFor(model => model.Tipo)
     </div>
-    <div class="editor-field">
+    <div class="display-field">
         @Html.DisplayFor(model => model.Tipo.Nombre)
     </div>
 
     <!-- Descripcion -->
-    <div class="editor-label">
+    <div class="display-label">
         @Html.DisplayNameFor(model => model.Descripcion)
     </div>
-    <div class="editor-field">
+    <div class="display-field">
         @Html.DisplayFor(model => model.Descripcion)
     </div>
 
@@ -45,7 +45,7 @@
     @foreach (var caracteristica in Model.Caracteristicas)
     {
         <div class="display-label">
-             @Html.DisplayFor(model => caracteristica.Tipo.Nombre)
+            @Html.DisplayFor(model => caracteristica.Tipo.Nombre)
         </div>
         <div class="display-field">
             @Html.DisplayFor(model => caracteristica.Valor)
@@ -53,6 +53,6 @@
     }
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }, new { @class = "actionButton littleButton" })
+    @Html.ActionLink("Volver al listado", "Index", null, new { @class = "actionButton littleButton" })
 </p>
