--- a/Presentacion/Content/Site.css
+++ b/Presentacion/Content/Site.css
@@ -3,6 +3,19 @@
     font-weight: bold;
 }
 
+.actionButton {
+    text-decoration: none;
+    height: 30px;
+    background-color: #d3dce0;
+    border: 1px solid #787878;
+    padding: 7px;
+    line-height: 25px;
+}
+
+.littleButton {
+    padding: 2px;
+}
+
 /************/
 
 html {
