--- a/Presentacion/Views/Recursos/Create.cshtml
+++ b/Presentacion/Views/Recursos/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Presentacion.Models.RecursoVM
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear Recurso";
 }
 
-<h2>Create</h2>
+<h2>Crear Recurso</h2>
 
 @using (Html.BeginForm())
 {
@@ -57,59 +57,43 @@
         <div id="characteristics-container">
 
         </div>
-        <button type="button" onclick='javascript: AddNewCharacteristic();'>Agregar caracteristica</button>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Crear" />
         </p>
+        
+        
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver al listado", "Index")
 </div>
+
+
+<script type="text/template" id="characteristic-template">
+    <div class='editor-label'>
+        <input name='CaracteristicasTipo' value='{{TipoId}}' type="hidden">
+        <label for='{{CharacteristicName}}'>{{CharacteristicName}}</label>
+    </div>
+
+    <div class='editor-field'>
+        <input type='text' name='CaracteristicasValor' />
+    </div>
+</script>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script type="text/javascript">
-        /* TODO DUPLICATED CODE FROM EDIT */
+    @Scripts.Render("~/Scripts/recursos-utilities.js")
 
-        // Registrar evento para el cambio de tipo de recurso
+    <script type="text/javascript">
+        // Obtener tipos de recursos y registrar evento para el cambio de tipo de recurso
         $(document).ready(
             function () {
-                $('#TipoId').on('change', function () { CambiarTiposDeRecursos(); });
+                ObtenerTiposDeRecursos();
+                CambiarTiposDeRecursos();
+                $('#TipoId').on('change', CambiarTiposDeRecursos);
             }
         );
-
-        function CambiarTiposDeRecursos() {
-            $("div[class='tiposDeCaracteristica'").html(ObtenerTiposDeRecursos());
-        }
-
-        function ObtenerTiposDeRecursos() {
-            var toReturn = null;
-            $.ajax({
-                url: '/Recursos/ObtenerTiposPartial',
-                async: false,
-                contentType: 'application/html; charset=utf-8',
-                type: 'GET',
-                data: { tipoId: $('#TipoId').val() },
-                dataType: 'html'
-            }
-            ).success(function (result) {
-                toReturn = result;
-            });
-            return toReturn;
-        };
-
-        function AddNewCharacteristic() {
-            $('#characteristics-container').append(
-                "<div class='editor-field'>" +
-                "   <div class='tiposDeCaracteristica' >" +
-                ObtenerTiposDeRecursos() +
-                "   </div>" +
-                "   <input type=\"text\" name='CaracteristicasValor' />" +
-                "</div>"
-            );
-        }
     </script>
 }
