Agregado AutorizacionUsuario con DI para usar en ReservasController

--- a/Presentacion/Views/Shared/_Layout.cshtml
+++ b/Presentacion/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Reservas", "Index", "Reservas")</li>
                             <li>@Html.ActionLink("Recursos", "Index", "Recursos")</li>
                             <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
 
