--- a/Presentacion/Views/Reservas/Index.cshtml
+++ b/Presentacion/Views/Reservas/Index.cshtml
@@ -7,6 +7,7 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Buscar y Listar", "ListAndSearch")
 </p>
 
 @if (Model.Count() > 0)
