--- a/Presentacion/Views/Recursos/Create.cshtml
+++ b/Presentacion/Views/Recursos/Create.cshtml
@@ -50,9 +50,7 @@
         </div>
 
         <!-- Caracteristicas -->
-        <div class="editor-label">
-            @Html.Label("Caracteristicas")
-        </div>
+        <h3>Caracteristicas</h3>
 
         <div id="characteristics-container">
 
