--- a/Presentacion/Views/Recursos/Edit.cshtml
+++ b/Presentacion/Views/Recursos/Edit.cshtml
@@ -52,9 +52,7 @@
         </div>
 
         <!-- Caracteristicas -->
-        <div class="editor-label">
-            @Html.Label("Caracteristicas")
-        </div>
+        <h3>Características</h3>
 
         <div id="characteristics-container">
             @foreach (var tipoCaracteristica in Model.Tipo.TiposDeCaracteristicas)
