--- a/Presentacion/Views/Recursos/Index.cshtml
+++ b/Presentacion/Views/Recursos/Index.cshtml
@@ -7,19 +7,31 @@
 <h2>Listado de Recursos</h2>
 
 <p>
-    @Html.ActionLink("Crear Nuevo Recurso", "Create", null, new { @class = "actionButton"})
+    @Html.ActionLink("Crear Nuevo Recurso", "Create", null, new { @class = "actionButton" })
 </p>
 @using (Html.BeginForm())
 {
-    <p>
-        Buscar por Código: @Html.TextBox("filtroCodigo")
-    </p>
-    <p>
-        Buscar por Tipo: @Html.DropDownList("filtroTipo", Model.SelectTiposDeRecursos)
-    </p>
-    <p>
-        Buscar por Nombre: @Html.TextBox("filtroNombre")
-    </p>
+    <div class="editor-label">
+        <label>Buscar por Código</label>
+    </div>
+    <div class="editor-field">
+        @Html.TextBox("filtroCodigo")
+    </div>
+
+    <div class="editor-label">
+        <label>Buscar por Tipo</label>
+    </div>
+    <div class="editor-field">
+        @Html.DropDownList("filtroTipo", Model.SelectTiposDeRecursos)
+    </div>
+
+    <div class="editor-label">
+        <label>Buscar por Nombre</label>
+    </div>
+    <div class="editor-field">
+        @Html.TextBox("filtroNombre")
+    </div>
+
     <input type="submit" value="Buscar" />
 }
 <table>
@@ -36,24 +48,25 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model.Recursos) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Codigo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Tipo.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "actionButton littleButton" })
-            @Html.ActionLink("Ver Detalle", "Details", new { id = item.Id }, new { @class = "actionButton littleButton" })
-            @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }, new { @class = "actionButton littleButton" })
+    @foreach (var item in Model.Recursos)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Codigo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tipo.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "actionButton littleButton" })
+                @Html.ActionLink("Ver Detalle", "Details", new { id = item.Id }, new { @class = "actionButton littleButton" })
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }, new { @class = "actionButton littleButton" })
 
-        </td>
-    </tr>
-}
+            </td>
+        </tr>
+    }
 
 </table>
