--- a/Presentacion/Views/Reservas/Delete.cshtml
+++ b/Presentacion/Views/Reservas/Delete.cshtml
@@ -1,47 +1,55 @@
 ﻿@model Presentacion.Models.ReservaVM
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Cancelar reserva";
 }
 
-<h2>Delete</h2>
+<h2>Cancelar reserva</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro de cancelar la reserva?</h3>
 <fieldset>
     <legend>Reserva</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Inicio)
+        @Html.DisplayNameFor(model => model.RecursoReservado)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.RecursoReservado)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Inicio)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Inicio)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Fin)
+        @Html.DisplayNameFor(model => model.Fin)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Fin)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.FechaCreacion)
+        @Html.DisplayNameFor(model => model.FechaCreacion)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.FechaCreacion)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Descripcion)
+        @Html.DisplayNameFor(model => model.Descripcion)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Descripcion)
     </div>
 </fieldset>
+
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="Cancelar Reserva" /> |
+        @Html.ActionLink("Volver a la lista", "Index")
     </p>
 }
