--- a/Presentacion/Views/Reservas/Index.cshtml
+++ b/Presentacion/Views/Reservas/Index.cshtml
@@ -21,7 +21,7 @@
                 @Html.DisplayNameFor(model => model.Fin)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RecursoReservado.Nombre)
+                @Html.DisplayNameFor(model => model.RecursoReservado)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Estado)
@@ -40,7 +40,7 @@
                     @Html.DisplayFor(modelItem => item.Fin)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RecursoReservado.Nombre)
+                    @Html.DisplayFor(modelItem => item.RecursoReservado)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Estado)
@@ -57,9 +57,9 @@
 }
     </table>
 }
-        @if(Model.Count() == 0)
-        {
-            <p>No hay reservas almacenadas</p>
-        }
+@if (Model.Count() == 0)
+{
+    <p>No hay reservas almacenadas</p>
+}
             
 
