Reservar desde busqueda, datetimepicker, bootstrap (files only)

--- a/Presentacion/Views/Recursos/Buscar.cshtml
+++ b/Presentacion/Views/Recursos/Buscar.cshtml
@@ -71,7 +71,8 @@
 
 <script type="text/template" id="resource-template">
     <div class="recurso">
-        <strong>Código: </strong>{{CodigoRecurso}}, <strong>Nombre: </strong>{{NombreRecurso}}
+        <strong>Código: </strong>{{CodigoRecurso}} - <strong>Nombre: </strong>{{NombreRecurso}} - <strong>Descripción:</strong> {{DescripcionRecurso}}
+        <a href='@Url.Action("CreateForResource", "Reservas")/{{Id}}'><strong>Reservar</strong></a>
     </div>
 </script>
 
