--- a/Presentacion/Views/Shared/_Layout.cshtml
+++ b/Presentacion/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
         </footer>
 
         @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
     </body>
 </html>
