--- a/Presentacion/Views/Reservas/FullList.cshtml
+++ b/Presentacion/Views/Reservas/FullList.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Presentacion.Models.BusquedaReservasVM
 @{
-    ViewBag.Title = "Listado de reservas";
+    ViewBag.Title = "Todas las reservas";
 }
 
-<legend>Listado de todas las reservas</legend>
+<legend>Todas las reservas</legend>
 
 <div class="row">
     <div class="col-md-9">
         <div class="row">
             <div class="col-md-12">
-                
+
             </div>
-        </div>    
+        </div>
         @if (Model.ListaDeReservas.Any())
         {
             <table class="table table-hover table-bordered table-striped">
@@ -68,8 +68,8 @@
             </table>
         }
         else
-        {
-            <p>No hay reservas a mostrar</p>
+        {           
+            <br /><h4>Aún no hay reservas</h4>
         }
     </div>
 
@@ -101,3 +101,15 @@
         }
     </div>
 </div>
+
+@section Scripts {
+    @Styles.Render("~/Content/themes/base/css")
+    @Scripts.Render("~/bundles/jqueryui")
+
+    <script type="text/javascript">
+        $(function () {
+            $("[name='fechaDesde']").datetimepicker({ format: 'd/m/Y H:i', inline: false });
+            $("[name='fechaHasta']").datetimepicker({ format: 'd/m/Y H:i', inline: false });
+        });
+    </script>
+}
